--- a/2 Termo/AMB_PROG II/Semana 2 - Envio da atividade de Formatação (pode ser entregue em duplas)/ap2.html
+++ b/2 Termo/AMB_PROG II/Semana 2 - Envio da atividade de Formatação (pode ser entregue em duplas)/ap2.html
@@ -7,7 +7,12 @@
     <link rel="stylesheet" href="ap2.css" type="text/css">
     <link rel="shortcut icon" href="computer.ico" type="image/x-icon">
     <style type="text/css"> /*estilo incorporado */
-        body{background-color: #c0c0c0;}
+        body{background-color: #c0c0c0;
+        margin-top: 12px;
+        margin-bottom: 12px;
+        margin-left: 100px;
+        margin-right: 100px;
+    }
         h4{text-transform: uppercase;
         text-decoration: underline ;
     text-shadow: -3px -3px 10px rgb(0, 255, 42);} 
@@ -49,15 +54,18 @@
     <h4 class="espaco-letras centraliza borda"><em>Ferramentas de Apoio cada vez mais Inovadoras</em></h4>
     <p>No marketing digital, o profissional ou empreendedor terá a oportunidade de trabalhar com plataformas, aplicativos e até ferramentas de qualidade. Como resultado, o seu projeto estará preparado para alcançar o sucesso.
     Assim, a partir da escolha correta, seu negócio otimizará tempo, dinheiro e acumular novos consumidores. Portanto, vale muito a pena conferir algumas opções interessantes:</p>
+</body>
+<body>
     <ul>
-        <li class="sombra-extra">WordPress: plataforma para criação de websites;</li>
-        <li class="sombra-extra">Lead Lovers:ferramenta que realiza uma automação das páginas de venda e captura dos novos contatos;</li>
-        <li class="sombra-extra">Mailchimp: ferramenta de criação e gerenciamento dos emails marketing;</li>
-        <li class="sombra-extra">MLabs: plataforma que gerencia as mídias sociais;</li>
-        <li class="sombra-extra">Google Analytics: ferramenta do Google que emite, observa e identifica métricas referentes ao seu site.</li><br>
+        <li><span class="sombra-extra"><strong>WordPress:</strong></span> plataforma para criacao de website</li>
+        <li><span class="sombra-extra"><strong>Lead Lovers:</strong></span>ferramenta que realiza uma automação das páginas de venda e captura dos novos contatos;</li>
+        <li><span class="sombra-extra"><strong>Mailchimp:</strong></span> ferramenta de criação e gerenciamento dos emails marketing;</li>
+        <li><span class="sombra-extra"><strong>MLabs:</strong></span> plataforma que gerencia as mídias sociais;</li>
+        <li><span class="sombra-extra"><strong>Google Analytics:</strong></span> ferramenta do Google que emite, observa e identifica métricas referentes ao seu site.</li><br>
     </ul>
     <p>Acima, inserimos alguns exemplos. Porém, existem muitos outros que te ajudarão de um modo fenomenal!</p><br>
-
+</body>
+<body>
     <h4>Acompanhamento e Monitoramento das Métricas</h4>
     <p>Por último, uma vantagem que diferencia esta tática de outras existentes no mercado. Isso porque, o marketing no ambiente web permite que você observe, monitore e melhore algumas métricas.
     Assim, a partir das informações e dados emitidos, será possível modificar uma atividade ou até encerrá-la. Como resultado, isso impedirá que ocorra uma perda de dinheiro substancial (caso a estratégia não esteja funcionando).
