--- a/3-Termo/LP-I/animacao/index.html
+++ b/3-Termo/LP-I/animacao/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cenário</title>
 </head>
-<body>
+<body background="./img/image.png">
     <div id="tela">
 
     </div>
